Backend arreglos sonarqube